[gd_scene load_steps=2 format=2]

[ext_resource path="res://Test/Selection.gd" type="Script" id=1]

[node name="Selection" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1620.0
margin_bottom = -580.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
margin_right = 300.0
margin_bottom = 500.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 300.0
margin_bottom = 500.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button1" type="Button" parent="VBoxContainer"]
margin_right = 300.0
margin_bottom = 20.0
text = "1"

[node name="Button2" type="Button" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 300.0
margin_bottom = 44.0
text = "2"

[connection signal="pressed" from="VBoxContainer/Button1" to="." method="_on_Button1_pressed"]
[connection signal="pressed" from="VBoxContainer/Button2" to="." method="_on_Button2_pressed"]
